force-app/main/default/objects/ClientContactRole__c/ClientContactRole__c.object-meta.xml
<CustomObject>
    <description>Junction associating a Contact with a Client Profile in a named role. Master-detail child of Client Profile.</description>
    <label>Client Contact Role</label>
    <nameField>
        <displayFormat>CCR-{0000000}</displayFormat>
        <label>Client Contact Role Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>