force-app/main/default/objects/ClientContactRole__c/fields/Client_Profile__c.field-meta.xml
<CustomField>
    <fullName>Client_Profile__c</fullName>
    <description>Parent client profile.</description>
    <label>Client Profile</label>
    <referenceTo>ClientProfile__c</referenceTo>
    <relationshipLabel>Client Contact Roles</relationshipLabel>
    <relationshipName>Client_Contact_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>