force-app/main/default/objects/ClientContactRole__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The contact filling this role.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Contact Roles</relationshipLabel>
    <relationshipName>Client_Contact_Roles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>