force-app/main/default/objects/ClientContactRole__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this is the primary contact for the role type.</description>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>