force-app/main/default/objects/ClientContactRole__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>The contact&apos;s role on this client relationship.</description>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Executive Sponsor</fullName>
            </value>
            <value>
                <fullName>Billing Contact</fullName>
            </value>
            <value>
                <fullName>Technical Lead</fullName>
            </value>
            <value>
                <fullName>Day-to-Day</fullName>
                <default>true</default>
                <label>Day-to-Day</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>